# job-search-on-hh.ru

./: .gitignore  README.md  pyproject.toml
src/: creating_vacancy.py  data_base_region.py  getting_data_from_the_api.py  load_in_file.py  main.py  make_new_structure.py  vacancy.json  visualization.py
tests/: test_data_base_region.py  test_getting_data_from_the_api.py  test_load_in_file.py
