[tool.poetry]
name = "job-search-on-hh-ru"
version = "0.1.0"
description = ""
authors = ["denishudyakov <denis.hudyakov27@gmail.com>"]
readme = "README.md"
packages = [{include = "job_search_on_hh"}]

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^23.12.1"
mypy = "^1.8.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
requests = "^2.31.0"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
